--- a/config.toml
+++ b/config.toml
@@ -36,6 +36,7 @@ title = "M. Sten Delos"
     github = "delos"
     twitter = "stendelos"
     email = "sten@mpa-garching.mpg.de"
+    orcid = "0000-0003-3808-5321"
 
 ## Main Menu
 [[menu.main]]
