--- a/config.toml
+++ b/config.toml
@@ -34,7 +34,7 @@ title = "M. Sten Delos"
 ## Social Accounts
 [params.social]
     github = "delos"
-    twitter = "stendelos"
+    #twitter = "stendelos"
     email = "sten@mpa-garching.mpg.de"
     orcid = "0000-0003-3808-5321"
 
