--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ title = "M. Sten Delos"
 [params.social]
     github = "delos"
     #twitter = "stendelos"
-    email = "sten@mpa-garching.mpg.de"
+    email = "mdelos@carnegiescience.edu"
     orcid = "0000-0003-3808-5321"
 
 ## Main Menu
