--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 title                    : "M. Sten Delos"
-title_separator          : "-"
+title_separator          : "|"
 name                     : &name "Sten Delos"
 description              : &description "personal description"
 url                      : https://stendelos.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
